--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/ServiceType/ServiceTypeEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/ServiceType/ServiceTypeEditor.html
@@ -47,20 +47,8 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
-                <vr-tab header="'Charging Policy Definition'">
-                    <vr-row>
-                        <vr-columns width="fullrow">
-                            <retail-be-servicetype-chargingpolicy-definition on-ready="scopeModel.onChargingPolicyReady" normal-col-num="2"></retail-be-servicetype-chargingpolicy-definition>
-                        </vr-columns>
-                    </vr-row>
-                </vr-tab>
-                <vr-directivewrapper ng-if="scopeModel.selectedExtendedSettingsTemplateConfig != undefined"
-                                     directive="scopeModel.selectedExtendedSettingsTemplateConfig.Editor"
-                                     on-ready="scopeModel.onExtendedSettingsDirectiveReady"
-                                     vr-loader="scopeModel.isExtendedSettingsDirectiveLoading">
-                </vr-directivewrapper>
-
-            </vr-tabs>
+                <retail-be-servicetype-settings on-ready="scopeModel.onServiceTypeSettingsDirectiveReady" vr-loader="scopeModel.isServiceTypeSettingsLoading"></retail-be-servicetype-settings>
+           </vr-tabs>
 
         </vr-form>
     </vr-modalbody>
