--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountPartDefinition/Templates/OverriddenConfigurationAccountPartDefinition.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountPartDefinition/Templates/OverriddenConfigurationAccountPartDefinition.html
@@ -8,12 +8,12 @@
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.accountPartDefinitionTitle" isrequired="true" label="Title" customvalidate="scopeModel.validate()"></vr-textbox>
+            <vr-textbox value="scopeModel.title" label="Title" ></vr-textbox>
         </vr-columns>
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
-            <vr-switch value="scopeModel.showSettings" label="Change Settings" onvaluechanged="scopeModel.loadSettings"></vr-switch>
+            <vr-switch value="scopeModel.isSettingsOverridden" label="Change Settings" onvaluechanged="scopeModel.isSettingsOverriddenValuechanged"></vr-switch>
         </vr-columns>
     </vr-row>
 </vr-tab>
@@ -21,4 +21,4 @@
     <div ng-if="scopeModel.showDirectiveSettings">
         <retail-be-accounttype-part-definition on-ready="scopeModel.accountPartDefinitionDirectiveReady" normal-col-num="3"></retail-be-accounttype-part-definition>
     </div>
-</tab>
+</vr-tab>
