--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRuleDefinition/Templates/OverriddenGenericRuleDefinition.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRuleDefinition/Templates/OverriddenGenericRuleDefinition.html
@@ -9,12 +9,12 @@
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.genericRuleDefinitionTitle" isrequired="true" label="Title" customvalidate="scopeModel.validate()"></vr-textbox>
+            <vr-textbox value="scopeModel.title" label="Title"></vr-textbox>
         </vr-columns>
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
-            <vr-switch value="scopeModel.showSettings" label="Change Settings" onvaluechanged="scopeModel.loadSettings"></vr-switch>
+            <vr-switch value="scopeModel.isSettingsOverridden" label="Change Settings" onvaluechanged="scopeModel.isSettingsOverriddenValuechanged"></vr-switch>
         </vr-columns>
     </vr-row>
 </vr-tab> 
