--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ServiceType/Templates/ServiceTypeSettings.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ServiceType/Templates/ServiceTypeSettings.html
@@ -5,8 +5,39 @@
         </vr-columns>
     </vr-row>
 </vr-tab>
-<vr-directivewrapper ng-if="scopeModel.selectedExtendedSettingsTemplateConfig != undefined"
-                     directive="scopeModel.selectedExtendedSettingsTemplateConfig.Editor"
-                     on-ready="scopeModel.onExtendedSettingsDirectiveReady"
-                     vr-loader="scopeModel.isExtendedSettingsDirectiveLoading">
-</vr-directivewrapper>
+<vr-tab header="'Settings'">
+
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-genericdata-genericruledefinition-selector on-ready="scopeModel.onRuleDefinitionSelectorReady" customlabel="Identification Rule"></vr-genericdata-genericruledefinition-selector>
+        </vr-columns>
+</vr-row>
+    <vr-row>
+        <retail-be-statusdefinition-selector on-ready="scopeModel.onStatusDefinitionSelectorReady" normal-col-num="6" customlabel="Initial Status" isrequired="true"></retail-be-statusdefinition-selector>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-textarea label="Description" value="scopeModel.description" isrequired></vr-textarea>
+        </vr-columns>
+    </vr-row>
+</vr-tab>
+    <vr-tab header="'Type'">
+        <vr-row>
+            <vr-columns width="1/2row">
+                <vr-select on-ready="scopeModel.onExtendedSettingsSelectorReady"
+                           datasource="scopeModel.extendedSettingsTemplateConfigs"
+                           selectedvalues="scopeModel.selectedExtendedSettingsTemplateConfig"
+                           datavaluefield="ExtensionConfigurationId"
+                           datatextfield="Title"
+                           label="Type"
+                           isrequired="true"
+                           hideremoveicon>
+                </vr-select>
+            </vr-columns>
+        </vr-row>
+        <vr-directivewrapper ng-if="scopeModel.selectedExtendedSettingsTemplateConfig != undefined"
+                             directive="scopeModel.selectedExtendedSettingsTemplateConfig.Editor"
+                             on-ready="scopeModel.onExtendedSettingsDirectiveReady"
+                             vr-loader="scopeModel.isExtendedSettingsDirectiveLoading">
+        </vr-directivewrapper>
+    </vr-tab>
