--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/ServiceType/ServiceTypeEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/ServiceType/ServiceTypeEditor.html
@@ -8,17 +8,6 @@
                         <vr-columns width="1/2row">
                             <vr-textbox label="Title" value="scopeModel.title" isrequired></vr-textbox>
                         </vr-columns>
-                        <vr-columns width="1/2row">
-                            <vr-select on-ready="scopeModel.onExtendedSettingsSelectorReady"
-                                       datasource="scopeModel.extendedSettingsTemplateConfigs"
-                                       selectedvalues="scopeModel.selectedExtendedSettingsTemplateConfig"
-                                       datavaluefield="ExtensionConfigurationId"
-                                       datatextfield="Title"
-                                       label="Type"
-                                       isrequired="true"
-                                       hideremoveicon>
-                            </vr-select>
-                        </vr-columns>
                     </vr-row>
                     <vr-row>
                         <vr-columns width="1/2row">
@@ -27,27 +16,16 @@
                                                                               customlabel="Account Definition" hideremoveicon isrequired="true">
                             </vr-genericdata-businessentitydefinition-selector>
                         </vr-columns>
-                        <vr-columns width="1/2row" ng-show="scopeModel.showGenericRuleDefinitionSelector">
-                            <span vr-loader="scopeModel.isGenericRuleDefinitionSelectorLoading">
-                                <vr-genericdata-genericruledefinition-selector on-ready="scopeModel.onRuleDefinitionSelectorReady" customlabel="Identification Rule" isrequired="true"></vr-genericdata-genericruledefinition-selector>
-                            </span>
-                        </vr-columns>
                     </vr-row>
                     <!--<vr-row>
                         <vr-columns width="1/2row">
                             <vr-genericdata-genericruledefinition-selector customlabel="Identification Rule" on-ready="scopeModel.onRuleDefinitionSelectorReady" isrequired="true"></vr-genericdata-genericruledefinition-selector>
                         </vr-columns>
                     </vr-row>-->
-                    <vr-row>
-                        <retail-be-statusdefinition-selector on-ready="scopeModel.onStatusDefinitionSelectorReady" normal-col-num="6" customlabel="Initial Status" isrequired="true"></retail-be-statusdefinition-selector>
-                    </vr-row>
-                    <vr-row>
-                        <vr-columns width="1/2row">
-                            <vr-textarea label="Description" value="scopeModel.description" isrequired></vr-textarea>
-                        </vr-columns>
-                    </vr-row>
                 </vr-tab>
-                <retail-be-servicetype-settings on-ready="scopeModel.onServiceTypeSettingsDirectiveReady" vr-loader="scopeModel.isServiceTypeSettingsLoading"></retail-be-servicetype-settings>
+                <span vr-loader="scopeModel.isServiceTypeSettingsLoading" ng-show="scopeModel.showServiceTypeSettingsDirective">
+                    <retail-be-servicetype-settings on-ready="scopeModel.onServiceTypeSettingsDirectiveReady"></retail-be-servicetype-settings>
+                </span>
            </vr-tabs>
 
         </vr-form>
