--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Settings/Templates/OverriddenConfigurationSettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/Settings/Templates/OverriddenConfigurationSettings.html
@@ -1,9 +1,31 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<vr-tab header="'Settings'">
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-common-settings-selector on-ready="scopeModel.onSettingsSelectorReady" isrequired="true"
+                                         customlabel="Settings"
+                                         normal-col-num="6"
+                                         onselectionchanged="scopeModel.settingsSelectorSelectionChanged">
+            </vr-common-settings-selector>
+        </vr-columns>
+</vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.category" label="Category"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.name" label="Name"></vr-textbox>
+        </vr-columns>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.isSettingsOverridden" label="Change Settings" onvaluechanged="scopeModel.isSettingsOverriddenValuechanged"></vr-switch>
+        </vr-columns>
+    </vr-row>
+</vr-tab>
+<div ng-if="scopeModel.showDirectiveSettings">
+    <vr-section title="Settings">
+        <vr-row removeline>
+            <vr-directivewrapper directive="settingEditor" on-ready="scopeModel.onSettingsEditorReady"></vr-directivewrapper>
+        </vr-row>
+    </vr-section>
+</div>
