--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
@@ -5,6 +5,9 @@
                                                               customlabel="Status Definition" normal-col-num="6" isrequired="true">
             </vr-genericdata-businessentitydefinition-selector>
         </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.useRemoteSelector" label="Use Remote Selector"></vr-switch>
+        </vr-columns>
     </vr-row>
 </vr-tab>
 <vr-tab header="'Extra Fields'">
