Adding financial account validation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41225

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountSearchTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/FinancialAccount/Templates/FinancialAccountSearchTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-row removeline vr-loader="scopeModel.isLoading">
     <vr-columns width="normal">
-        <vr-button type="Add" standalone data-onclick="scopeModel.addFinancialAccount"></vr-button>
+        <vr-button type="Add" standalone data-onclick="scopeModel.addFinancialAccount" vr-disabled="!scopeModel.showAddButton"></vr-button>
     </vr-columns>
 </vr-row>
 <vr-row removeline>
