Ability to add list numbers or list ranges to DID
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41235

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDManagement.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDManagement.html
@@ -5,7 +5,7 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns width="normal">
-                    <vr-textbox label="Number" value="scopeModel.number"></vr-textbox>
+                    <vr-textbox label="Number" value="scopeModel.number" type="number" decimalprecision="0"></vr-textbox>
                 </vr-columns>
             </vr-row>
         </div>
