--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDEditor.html
@@ -5,17 +5,20 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
+                        <retail-be-didnumbertype-selector on-ready="scopeModel.onDIDNumberTypeSelectorReady" selectedvalues="scopeModel.selectedDIDNumberType" normal-col-num="4" isrequired="true"></retail-be-didnumbertype-selector>
+
+                        <vr-directivewrapper ng-if="scopeModel.selectedDIDNumberType != undefined" directive="scopeModel.selectedDIDNumberType.editor"
+                                             on-ready="scopeModel.onDirectiveReady"></vr-directivewrapper>
+                    </vr-row>
+                    <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-textbox value="scopeModel.number" label="Number" isrequired></vr-textbox>
-                        </vr-columns>
-                        <vr-columns width="1/2row">
-                            <vr-switch value="scopeModel.isInternational" label="International" ></vr-switch>
+                            <vr-switch value="scopeModel.isInternational" label="International"></vr-switch>
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.numberOfChannels" type="number" label="Number of Channels" isrequired minvalue="1" decimalprecision="0"></vr-textbox>
                         </vr-columns>
                     </vr-row>
-                </vr-tab>                
+                </vr-tab>
             </vr-tabs>
         </vr-form>
     </vr-modalbody>
