Added the SellingProductId property to the CarrierAccount class and made the corresponding changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41239

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CarrierAccount/Templates/CarrierAccountGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CarrierAccount/Templates/CarrierAccountGridTemplate.html
@@ -4,14 +4,15 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Entity.CarrierAccountId"
-             showexpand="isExpandable" enableautoexport="true">
-
+             showexpand="isExpandable"
+             enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.CarrierAccountId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Account'" field="'CarrierAccountName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Profile'" field="'CarrierProfileName'" type="'Text'" ng-show="!hideProfileColumn"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Account Type'" field="'AccountTypeDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Activation Status'" field="'ActivationStatusDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlanName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Selling Product'" field="'SellingProductName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Services'" field="'Services'">
         <vr-whs-be-services-viewer on-ready="dataItem.onServiceReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
