--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/OverriddenConfigurationVRMailType.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/OverriddenConfigurationVRMailType.html
@@ -1,9 +1,26 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<vr-tab header="'MailMessageTypeSettings'">
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-common-mailmessagetype-selector on-ready="scopeModel.onMailMessageTypeSelectorReady" isrequired="true"
+                                                customlabel="MailMessageTypeSettings"
+                                                onselectionchanged="scopeModel.mailMessageTypeSelectorSelectionChanged">
+            </vr-common-mailmessagetype-selector>
+        </vr-columns>
+        
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.name" label="Name"></vr-textbox>
+        </vr-columns>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.isSettingsOverridden" label="Change Settings" onvaluechanged="scopeModel.isSettingsOverriddenValuechanged"></vr-switch>
+        </vr-columns>
+    </vr-row>
+</vr-tab>
+<vr-tab header="'Objects'">
+    <div ng-if="scopeModel.showDirectiveSettings">
+        <vr-common-objectvariable-management on-ready="scopeModel.onObjectDirectiveReady" normal-col-num="4" isrequired enableadd="true"></vr-common-objectvariable-management>
+        </div>
+</vr-tab>
