--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRObjectTypeDefinition/Templates/OverriddenConfigurationObjectTypeDefinition.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRObjectTypeDefinition/Templates/OverriddenConfigurationObjectTypeDefinition.html
@@ -1,9 +1,22 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<vr-tab header="'ObjectTypeDefinitionSettings'">
+    <vr-row>
+        <vr-common-objecttypedefinition-selector on-ready="scopeModel.onObjectTypeDefinitionSelectorReady" isrequired="true"
+                                                 customlabel="ObjectTypeDefinitionSettings"
+                                                 normal-col-num="6"
+                                                 onselectionchanged="scopeModel.ObjectTypeDefinitionSelectorSelectionChanged">
+        </vr-common-objecttypedefinition-selector>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.name" label="Name"></vr-textbox>
+        </vr-columns>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.isSettingsOverridden" label="Change Settings" onvaluechanged="scopeModel.isSettingsOverriddenValuechanged"></vr-switch>
+        </vr-columns>
+    </vr-row>
+</vr-tab>
+    <div ng-if="scopeModel.showDirectiveSettings">
+        <vr-common-objecttypedefinition-settings on-ready="scopeModel.onObjectTypeDefinitionSettingsReady" normal-col-num="4" isrequired enableadd="true"></vr-common-objecttypedefinition-settings>
+    </div>
