--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRObjectTypeDefinition/Templates/VRObjectTypeDefinitionSettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRObjectTypeDefinition/Templates/VRObjectTypeDefinitionSettings.html
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<vr-tab header="'Settings'">
+        <vr-common-objecttype-selective on-ready="scopeModel.onObjectTypeSelectiveReady"
+                                        onselectionchanged="scopeModel.onObjectTypeSelectionChanged"
+                                        normal-col-num="6" isrequired="true">
+        </vr-common-objecttype-selective>
 
-</body>
-</html>
+    <vr-common-objecttypepropertydefinition-management on-ready="scopeModel.onPropertyDirectiveReady" ng-show="scopeModel.canDefineProperties" normal-col-num="4"></vr-common-objecttypepropertydefinition-management>
+</vr-tab>
