OrderDetailItem crm account refactor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41250

--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Views/OrderDetail/OrderDetailEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Views/OrderDetail/OrderDetailEditor.html
@@ -44,6 +44,32 @@
                 <vr-columns width="1/2row">
                     <vr-textbox value="scopeModel.achievement" isrequired="true" label="Achievement"></vr-textbox>
                 </vr-columns>
+
+                <vr-columns width="1/2row">
+                    <vr-textbox value="scopeModel.parentSo"  label="Parent SO" type="number"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox value="scopeModel.childSo"  label="Child SO"></vr-textbox>
+                </vr-columns>
+
+
+                <vr-columns width="1/2row">
+                    <vr-textbox value="scopeModel.salesAgent"  label="Sales Agent" ></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox value="scopeModel.type"  label="Type"></vr-textbox>
+                </vr-columns>
+                               
+                <vr-columns width="1/2row">
+                    <vr-datetimepicker value="scopeModel.confirmDate" label="Confirm Date" type="date"></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-datetimepicker value="scopeModel.closeDate" label="Close Date" type="date"></vr-datetimepicker>
+                </vr-columns>
+
+                <vr-columns width="fullrow">
+                    <vr-textarea value="scopeModel.remarks" label="Remarks"></vr-textarea>
+                </vr-columns>
             </vr-row>
         </vr-form>
     </vr-modalbody>
