--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Account/Part/Runtime/Templates/AccountTypePartOrderDetailsRuntimeTemplate.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Account/Part/Runtime/Templates/AccountTypePartOrderDetailsRuntimeTemplate.html
@@ -6,9 +6,12 @@
         <vr-columns width="fullrow">
             <vr-datagrid datasource="ctrl.orderdetails"  ondeleterow="ctrl.removeOrderDetail" norowhighlightonclick="true" hidegridmenu>
                 <vr-datagridcolumn headertext="'Service Order Id'" field="'OrderId'" isclickable="true" onclicked="ctrl.editOrderDetailItem"></vr-datagridcolumn>
-                <vr-datagridcolumn headertext="'Contract Remain'" field="'ContractRemain'" type="'Number'"></vr-datagridcolumn>
-                <vr-datagridcolumn headertext="'Contract Days'" field="'ContractDays'" type="'Number'"></vr-datagridcolumn>
-                <vr-datagridcolumn headertext="'Contract Period'" field="'ContractPeriod'" type="'Number'"></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Parent SO'" field="'ParentSo'" type="'Number'"></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Child SO'" field="'ChildSo'" ></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Sales Agent'" field="'SalesAgent'"></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Type'" field="'Type'"></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Confirm Date'" field="'ConfirmDate'" type="'Date'"></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Close Date'" field="'CloseDate'" type="'Date'"></vr-datagridcolumn>
             </vr-datagrid>
         </vr-columns>
     </vr-row>
