adjust DID structure
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41259

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDGridTemplate.html
@@ -6,7 +6,7 @@
              idfield="Entity.DIDId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.DIDId'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Number'" field="'Entity.Description'" disablesorting></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Number'" field="'Description'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Account'" field="'AccountName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Number Of Channels'" type="'Number'" field="'Entity.Settings.NumberOfChannels'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'International'" field="'Entity.Settings.IsInternational'">
