--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/DID/Templates/DIDNumber.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/DID/Templates/DIDNumber.html
@@ -1,3 +1,3 @@
-﻿<vr-columns width="1/3row">
-    <vr-textbox value="scopeModel.number" label="Number" isrequired="true" type=" number" decimalprecision="0"></vr-textbox>
+﻿<vr-columns width="2/3row">
+    <vr-textbox-multiple label="Numbers" datatype="number" value="scopeModel.numbers" isrequired="true" decimalprecision="0"></vr-textbox-multiple>
 </vr-columns>
