add didnumbertype selector to did management
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41271

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDEditor.html
@@ -4,7 +4,7 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <retail-be-didnumbertype-selector on-ready="scopeModel.onDIDNumberTypeSelectorReady" selectedvalues="scopeModel.selectedDIDNumberType" normal-col-num="4" isrequired="true"></retail-be-didnumbertype-selector>
+                        <retail-be-didnumbertype-selector on-ready="scopeModel.onDIDNumberTypeSelectorReady" selectedvalues="scopeModel.selectedDIDNumberType" hideremoveicon normal-col-num="4" isrequired="true"></retail-be-didnumbertype-selector>
 
                         <vr-directivewrapper ng-if="scopeModel.selectedDIDNumberType != undefined" directive="scopeModel.selectedDIDNumberType.editor"
                                              on-ready="scopeModel.onDirectiveReady"></vr-directivewrapper>
