--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Payment/Templates/PaymentConvertorEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Payment/Templates/PaymentConvertorEditor.html
@@ -11,11 +11,14 @@
     <vr-textbox value="scopeModel.sourceIdColumn" label="Source Id Column" isrequired="true"></vr-textbox>
 </vr-columns>
 <vr-columns width="1/2row">
-    <vr-textbox value="scopeModel.accountColumn" label="Source Account Id Column" isrequired="true"></vr-textbox>
+    <vr-textbox value="scopeModel.accountColumn" label="Account Source Id Column" isrequired="true"></vr-textbox>
 </vr-columns>
 <vr-columns width="1/2row">
     <vr-textbox value="scopeModel.amountColumn" label="Amount Column" isrequired="true"></vr-textbox>
 </vr-columns>
 <vr-columns width="1/2row">
     <vr-textbox value="scopeModel.timeColumn" label="Time Column" isrequired="true"></vr-textbox>
+</vr-columns>
+<vr-columns width="1/2row">
+    <vr-textbox value="scopeModel.invoiceSourceIdColumn" label="Invoice Source Id Column" isrequired="true"></vr-textbox>
 </vr-columns>
