--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/DID/DIDEditor.html
@@ -14,8 +14,12 @@
                             <vr-textbox value="scopeModel.numberOfChannels" type="number" label="Number of Channels" isrequired minvalue="1" decimalprecision="0"></vr-textbox>
                         </vr-columns>
                         <vr-columns width="1/3row">
+                            <vr-textbox value="scopeModel.soNumber" type="number" label="SO Number" decimalprecision="0"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/3row">
                             <vr-switch value="scopeModel.isInternational" label="International"></vr-switch>
                         </vr-columns>
+
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
