--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/QueueActivators/Templates/QueueActivatorUpdateAccountBalancesTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/QueueActivators/Templates/QueueActivatorUpdateAccountBalancesTemplate.html
@@ -1,32 +1,37 @@
 ﻿<div>
-    <vr-accountbalance-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady"
-                                            selectedvalues="scopeModel.selectedAccountType"
-                                            isrequired="true" normal-col-num="4">
+    <vr-accountbalance-accounttype-selector on-ready="scopeModel.onBalanceAccountTypeSelectorReady"
+                                            selectedvalues="scopeModel.selectedBalanceAccountType"
+                                            normal-col-num="4">
     </vr-accountbalance-accounttype-selector>
 
     <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady"
                                                        selectedvalues="scopeModel.selectedBillingTransactionType"
-                                                       isrequired="true" normal-col-num="4">
+                                                       normal-col-num="4">
     </vr-accountbalance-billingtransactiontype-selector>
 
     <vr-columns width="fullrow">
-        <vr-row>
-            <vr-columns width="fullrow" vr-loader="scopeModel.isGridLoading">
-                <vr-datagrid on-ready="scopeModel.ongridReady"
-                             datasource="scopeModel.dataRecordFields"
-                             pagingtype="'PagingOnScroll'">
+        <vr-section header="Mapping Fields">
+            <vr-row>
+                <vr-columns width="fullrow" vr-loader="scopeModel.isGridLoading">
+                    <vr-datagrid on-ready="scopeModel.onGridReady"
+                                 datasource="scopeModel.dataRecordFields"
+                                 pagingtype="'PagingOnScroll'">
 
-                    <vr-datagridcolumn headertext="'Record Name'" field="'RecordName'"></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Record Value'">
-                        <vr-genericdata-datarecordtypefields-selector on-ready="dataItem.onDataRecordFieldSelectorReady"
-                                                                      selectedvalues="scopeModel.selectedDataRecordTypeField"
-                                                                      hidelabel="true"
-                                                                      isrequired="true">
-                        </vr-genericdata-datarecordtypefields-selector>
-                    </vr-datagridcolumn>
-                </vr-datagrid>
-            </vr-columns>
-        </vr-row>
+                        <vr-datagridcolumn headertext="'Record Name'" field="'RecordName'"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Record Value'">
+                            <vr-genericdata-datarecordtypefields-selector on-ready="dataItem.onDataRecordFieldSelectorReady"
+                                                                          isrequired="viewScope.scopeModel.isDataRecordFieldRequired(dataItem)"
+                                                                          hidelabel="true">
+                            </vr-genericdata-datarecordtypefields-selector>
+                        </vr-datagridcolumn>
+                    </vr-datagrid>
+                </vr-columns>
+            </vr-row>
+        </vr-section>
+    </vr-columns>
+
+    <vr-columns width="fullrow">
+        <vr-accountbalance-updateaccountbalancesettings on-ready="scopeModel.onUpdateAccountBalanceSettingsDirectiveReady"></vr-accountbalance-updateaccountbalancesettings>
     </vr-columns>
 </div>
 
