--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/TransformationSteps/Templates/RetrieveFinancialInfoStepTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/TransformationSteps/Templates/RetrieveFinancialInfoStepTemplate.html
@@ -30,4 +30,11 @@
         </vr-columns>
     </vr-row>
 </vr-section>
+<vr-section title="Output Fields">
+    <vr-row>
+        <vr-columns width="fullrow">
+            <vr-genericdata-expressionbuilder on-ready="scopeModel.onFinancialAccountIdReady" label="Financial Account Id"></vr-genericdata-expressionbuilder>
+        </vr-columns>
+    </vr-row>
+</vr-section>
 
