--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/QueueActivators/Directives/Templates/QueueActivatorUpdateWhSBalancesTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/QueueActivators/Directives/Templates/QueueActivatorUpdateWhSBalancesTemplate.html
@@ -1,1 +1,3 @@
-﻿
+﻿<vr-columns width="fullrow">
+    <vr-accountbalance-updateaccountbalancesettings on-ready="scopeModel.onUpdateAccountBalanceSettingsDirectiveReady"></vr-accountbalance-updateaccountbalancesettings>
+</vr-columns>
