--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/MainExtensions/Templates/InternationalCallsBlockedExtraFieldTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/MainExtensions/Templates/InternationalCallsBlockedExtraFieldTemplate.html
@@ -1,1 +1,11 @@
-﻿
+﻿<vr-row>
+    <vr-columns width="1/3row">
+        <vr-textbox value="scopeModel.fieldName" label="Field Name" isrequired="true"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/3row">
+        <vr-textbox value="scopeModel.fieldTitle" label="Field Title" isrequired="true"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/3row">
+        <vr-textbox value="scopeModel.actionType" label="Action Type" isrequired="true"></vr-textbox>
+    </vr-columns>
+</vr-row>
