Add Company Id  to zajil CRM Account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41291

--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
@@ -13,7 +13,7 @@
             <vr-textbox value="scopeModel.serviceType" label="Service Type"></vr-textbox>
         </vr-columns> 
         <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.remarks" label="Remarks"></vr-textbox>
+            <vr-textbox value="scopeModel.companyId" label="Company Id" typeof="number"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
             <vr-textbox value="scopeModel.gPVoiceCustomerNo" label="GP Voice Customer No"></vr-textbox>
